syntax = "proto3";

package streaming;

service GreetService {
  // Streaming
  rpc GreetManyTimes (GreetManyTimesRequest)  returns (stream GreetManyTimesResponse) {};
}

message Greeting {
  string first_name = 1;
  string last_name = 2;
}

// Streaming
message GreetManyTimesRequest {
  Greeting greeting = 1;
}

message GreetManyTimesResponse {
  string result = 1;
}